mailhog/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mailhog-gateway
  namespace: test-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http2-mailhog
        protocol: HTTP2
      hosts:
        - "mailhog-istio.ISTIO_BASIC_URL"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https-mailhog
        protocol: HTTPS
      hosts:
        - "mailhog-istio.ISTIO_BASIC_URL"
      tls:
        mode: SIMPLE
        credentialName: "gateway-istio-tls"
