mailhog/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mailhog
  namespace: test-istio
spec:
  hosts:
  - "mailhog-istio.$ISTIO_BASIC_URL"
  gateways:
  - mailhog-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8025
            host: mailhog
